force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>Address Object.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Address Salesforce ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>