force-app/main/default/objects/Address__c/fields/AddressKlopotekID__c.field-meta.xml
<CustomField>
    <fullName>AddressKlopotekID__c</fullName>
    <description>(R1-S1 by JD); Unique Reference of the Address within Klopotek.</description>
    <label>Address Klopotek ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>