force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>(R1-S1 by JD): City.</description>
    <externalId>true</externalId>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>