force-app/main/default/objects/Address__c/fields/Number_Of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Locations__c</fullName>
    <description>Only temporary for data cleansing</description>
    <inlineHelpText>Only temporary for data cleansing</inlineHelpText>
    <label>Number Of Locations</label>
    <summaryForeignKey>Location__c.Address__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>