force-app/main/default/objects/Address__c/fields/OldOrigin__c.field-meta.xml
<CustomField>
    <fullName>OldOrigin__c</fullName>
    <label>OldOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>