force-app/main/default/objects/Address__c/fields/POBox__c.field-meta.xml
<CustomField>
    <fullName>POBox__c</fullName>
    <description>Consist of POBox name and number filled from Klopotek</description>
    <label>POBox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>