force-app/main/default/objects/Address__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <description>(R1-S1 by JD): State Province.</description>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>