force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>(R1-S1 by JD): Street.</description>
    <externalId>true</externalId>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>