force-app/main/default/objects/Address__c/fields/ZIPPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ZIPPostalCode__c</fullName>
    <description>(R1-S1 by JD): ZIP/Postal Code.</description>
    <externalId>true</externalId>
    <label>ZIP/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>